# manchkin-and-dragons-battle-ui

./: README.md  pyproject.toml
src/: db_model.py  log_conf.yaml  main.py  provider.py
src/static/: alliance.html  horde.html
